--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
@@ -16,15 +19,19 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.27.6",
+    "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.50.3",
-    "framer-motion": "^12.23.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.6",
     "leaflet": "^1.9.4",
     "node-fetch": "^2.7.0",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^10.1.0",
     "react-qr-scanner": "^1.0.0-alpha.11",
